# regkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  index.md
src/regkit/: __init__.py  registry.py
src/winregkit/: __init__.py  cli.py  registry.py
tests/: conftest.py  fakewinreg.py  test_fakewinreg_api.py  test_key_class.py  test_registry_import.py
tests/scripts/: inspect_winreg_exceptions.py
