[project]
name = "regkit"
version = "0.3.0"
description = "A modern, pythonic interface to the Windows registry."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/kristjanvalur/regkit"
Repository = "https://github.com/kristjanvalur/regkit"
Documentation = "https://kristjanvalur.github.io/regkit/"
Changelog = "https://github.com/kristjanvalur/regkit/blob/main/CHANGELOG.md"

[license]
text = "MIT"

[dependency-groups]
dev = ["pytest>=8.0", "mypy"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.28"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/regkit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]
lint.extend-select = ["I"] # Ensure import order is checked

